--- a/api/package.json
+++ b/api/package.json
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.1",
     "express": "~4.16.1",
     "gitignore": "^0.7.0",
+    "mongoose": "^6.4.4",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
